# Test-System-for-Collaborative-Perception

./: README.md
amis-admin-master/amis-admin-master/: index.html  package.json
amis-admin-master/amis-admin-master/pages/: augment.json  configuration.json  modeltest.json
client/pages/: site.json  upload.json  visual.json
client/public/: index.js
opencood/: detect.sh  pcdToGif (copy).py  pcdToGif.py  start.sh  steering-curve.py
opencood/OpenCOOD.egg-info/: PKG-INFO  SOURCES.txt
opencood/OpenData/test_culver/test_culver/ThreeCars_1/: data_protocol.yaml
opencood/opencood/data_utils/datasets/: basedataset.py  intermediate_fusion_dataset.py
opencood/opencood/data_utils/post_processor/: bev_postprocessor.py  voxel_postprocessor.py
opencood/opencood/hypes_yaml/: visualization.yaml
opencood/opencood/logs/point_pillar_v2vnet_2023_04_17_10_36_11/: config.yaml  events.out.tfevents.1681698971.chenwei-ZHENGJIUZHE-REN9000-34IMZ
opencood/opencood/models/v2vnet/: config.yaml  eval.yaml
opencood/opencood/pointpillar_fcooper/: config.yaml
opencood/opencood/tools/: inference_utils.py
opencood/opencood/utils/: box_overlaps.c  pcd_utils.py
opencood/opencood/visualization/: vis_utils (copy).py  vis_utils.py
server/: pom.xml  test_pcl
server/E_/augmentation res/fog/: log.txt
server/E_/augmentation res/rain/: log.txt
server/E_/augmentation res/snow/: log.txt
test_pcl/test_pcl/: CMakeLists.txt  batch_bin2pcdR.h  batch_pcd2bin.h  batch_pcd_augment.h  bin2pcdR.h  one_pcd_augment.h  pcd2bin.h  pcl_test.cpp
test_pcl/test_pcl/opv2v_origin_data/: data.txt
(+1735 files in other folders)
